--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <style>
     body {
       color: #ffffff;
-      background-color: #007f3f;
-      font-family: Arial, sans-serif;
+      background-color: #b84dff;
+      font-family: "Comic Sans MS", Arial, sans-serif;
       font-size: 14px;
     }
     
@@ -27,9 +27,9 @@
 <body>
   <div align="center">
     <h1>Congratulations!</h1>
-    <h2>You have successfully created a pipeline that retrieved this source application from an Amazon S3 bucket and deployed it 
-	to three Amazon EC2 instances using AWS CodeDeploy.</h2>
+    <h2>You have successfully created a pipeline that retrieved this source application from GitHub and deployed it to one Amazon EC2 instance using AWS Elastic Beanstalk. You’re one step closer to practicing continuous deployment!</h2>
     <p>For next steps, read the AWS CodePipeline Documentation.</p>
+	  <h2>Cutting it close, but getting it done!</h2>
   </div>
 </body>
 </html>
