--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <h2>You have successfully created a pipeline that retrieved this source application from GitHub and deployed it to one Amazon EC2 instance using AWS Elastic Beanstalk. You’re one step closer to practicing continuous deployment!</h2>
     <p>For next steps, read the AWS CodePipeline Documentation.</p>
 	  <h2>Cutting it close, but getting it done!</h2>
+	  <h3>Line added for second commit.....Nothing fancy!</h3>
   </div>
 </body>
 </html>
